--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Аяыг таа</string>
+    <string-array name="roles_array">
+        <item>user</item>
+        <item>admin</item>
+    </string-array>
     <string-array name="song_names">
         <item>aduutainamar</item>
         <item>agorahills</item>
